--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "javascript",
   "version": "1.0.0",
   "description": "WEB APP",
-  "main": "ap.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
