--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "babel-preset-latest": "^6.24.1",
     "firebase": "^9.9.0"
   }
 }
